# mgmc

./: CMakeLists.txt  README.md  sourcelist.cmake
include/geometry/: cell.hpp  cell_search_mesh.hpp  cell_universe.hpp  geo_lily_pad.hpp  geometry.hpp  hex_lattice.hpp  lattice.hpp  lattice_universe.hpp  rect_lattice.hpp  universe.hpp
include/geometry/surfaces/: all_surfaces.hpp  plane.hpp  sphere.hpp  surface.hpp  xcylinder.hpp  xplane.hpp  ycylinder.hpp  yplane.hpp  zcylinder.hpp  zplane.hpp
include/materials/: const_material.hpp  legendre_distribution.hpp  material.hpp  material_helper.hpp  mg_angle_distribution.hpp  mg_nuclide.hpp  nuclide.hpp
include/plotting/: pixel.hpp  plotter.hpp  slice_plot.hpp
include/simulation/: approximate_mesh_cancelator.hpp  basic_exact_mg_cancelator.hpp  box.hpp  branchless_power_iterator.hpp  cancel_bin.hpp  cancelator.hpp  carter_tracker.hpp  collision_mesh_tally.hpp  cone.hpp  delta_tracker.hpp  direction_distribution.hpp  energy_distribution.hpp  entropy.hpp  exact_mg_cancelator.hpp  exact_regional_mg_cancelator.hpp  fixed_source.hpp  flat_vibration_noise_source.hpp  flux_tally.hpp  implicit_leakage_delta_tracker.hpp  isotropic.hpp  mesh_tally.hpp  modified_fixed_source.hpp  mono_directional.hpp  mono_energetic.hpp  noise.hpp  noise_maker.hpp  noise_source.hpp  oscillation_noise_source.hpp  particle.hpp  point.hpp  power_iterator.hpp  power_tally.hpp  simulation.hpp  source.hpp  source_mesh_tally.hpp  spatial_distribution.hpp  square_oscillation_noise_source.hpp  surface_tracker.hpp  tallies.hpp  track_length_mesh_tally.hpp  (+3 more)
include/utils/: constants.hpp  direction.hpp  error.hpp  header.hpp  mpi.hpp  mt19937.hpp  output.hpp  parser.hpp  pcg.hpp  position.hpp  rng.hpp  settings.hpp  timer.hpp  vector.hpp
input_files/: PUa-1-0-IN.yaml  PUa-1-0-SL.yaml  PUa-1-1-SL.yaml  PUa-1-2-SL.yaml  PUb-1-0-IN.yaml  PUb-1-0-SL.yaml  UD2O-2-1-SL.yaml  Ua-1-1-CY.yaml  Ua-1-1-IN.yaml  c5g7.yaml  noise.yaml  noise_oscillation.yaml  noise_vibration.yaml  ref_sqr_c5g7.yaml  sqr_c5g7.yaml
src/: approximate_mesh_cancelator.cpp  basic_exact_mg_cancelator.cpp  box.cpp  branchless_power_iterator.cpp  cancel_bin.cpp  cancelator.cpp  carter_tracker.cpp  cell.cpp  cell_search_mesh.cpp  cell_universe.cpp  collision_mesh_tally.cpp  cone.cpp  const_material.cpp  delta_tracker.cpp  direction.cpp  direction_distribution.cpp  energy_distribution.cpp  error.cpp  exact_mg_cancelator.cpp  exact_regional_mg_cancelator.cpp  fixed_source.cpp  flat_vibration_noise_source.cpp  flux_tally.cpp  geometry.cpp  header.cpp  hex_lattice.cpp  implicit_leakage_delta_tracker.cpp  isotropic.cpp  lattice.cpp  lattice_universe.cpp  legendre_distribution.cpp  main.cpp  material.cpp  mesh_tally.cpp  mg_angle_distribution.cpp  mg_nuclide.cpp  modified_fixed_source.cpp  mono_directional.cpp  mono_energetic.cpp  mpi.cpp  (+39 more)
